--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ h2{
     line-height: 3.5625rem;
 }
 
+/* .input:valid{
+
+} */
+
 .recordar{
    display: flex;
    justify-content: space-between;
@@ -187,3 +191,5 @@ button{
         filter:hue-rotate(360deg);
     }
 }
+
+
